Multithreaded telemetry and improved first-launch message.

--- a/src/main/resources/assets/deftulib/lang/en_us.json
+++ b/src/main/resources/assets/deftulib/lang/en_us.json
@@ -2,7 +2,7 @@
     "key.categories.deftulib": "DeftuLib",
     "key.deftulib.player_action": "Player Actions",
 
-    "deftulib.update_checker.text": "Version %s of %s is now available. You have %s. It's in the %s channel.",
+    "deftulib.update_checker.text": "Version %s of %s is now available. You have version %s. It's in the %s channel.",
     "deftulib.update_checker.release": "release",
     "deftulib.update_checker.beta": "beta",
     "deftulib.update_checker.alpha": "alpha",
